--- a/k8s.html
+++ b/k8s.html
@@ -4,17 +4,25 @@
     <title>k8s graph - By Ralf Strobel</title>
 </head>
 <meta charset="utf-8">
+<style type="text/css">
+    html, body {
+        height: 100%;
+        margin: 0;
+    }
+
+</style>
 
 <body>
-<svg width="960" height="600"></svg>
+<svg id="wrapper" width="100%" height="100%"></svg>
 <script type="text/javascript" src="https://d3js.org/d3.v4.js"></script>
 <script>
     "use strict";
+
     var go = true,
         svg = d3.select("svg"),
-        width = +svg.attr("width"),
-        height = +svg.attr("height"),
-        color = d3.scaleOrdinal(d3.schemeCategory20),
+        width = 800,
+        height = 800,
+        color = d3.scaleOrdinal(d3.schemeCategory10),
         nodes = [],
         links = [];
 
@@ -27,7 +35,14 @@
         .alphaTarget(.01)
         .on("tick", ticked);
 
-    var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"),
+    svg.append("rect")
+        .attr("width", width)
+        .attr("height", height)
+        .style("fill", "none")
+        .style("pointer-events", "all")
+        .call(d3.zoom()
+            .on("zoom", zoomed));
+    var g = svg.append("g"),
         link = g.append("g").attr("class", "link").attr("stroke", "#000").selectAll(".link"),
         node = g.append("g").attr("class", "node").attr("stroke", "#000").selectAll(".node"),
         text = g.append("g").attr("class", "text").selectAll(".text");
@@ -37,9 +52,20 @@
         // Nodes
         node = node.data(nodes, function(d) { return d.id;});
         node.exit().remove();
-        node = node.enter().append("circle")
+        node = node.enter()
+            .append("path")
+            .attr("d", d3.symbol()
+                .size(function(d) {return d.size*100})
+                .type(function(d) {
+                    if (d.type === "node") {
+                        return d3.symbolSquare;
+                    } else if (d.type === "master") {
+                        return d3.symbolStar;
+                    } else {
+                        return d3.symbolCircle;
+                    }
+                }))
             .attr("fill", function(d) { return color(d.color); })
-            .attr("r", function(d) {return d.size})
             .attr("class", "node")
             .attr("stroke-width", function(d) {return d.size * 0.15})
             .call(d3.drag()
@@ -61,7 +87,7 @@
         text = text.enter()
             .append("text")
             .attr("class", "text")
-            .attr("font-size", function(d) {return d.size / 2})
+            .attr("font-size", function(d) {return d.size})
             .text(function(d) {return d.text})
             .merge(text);
 
@@ -71,6 +97,9 @@
     }
 
     function ticked() {
+        svg.selectAll("path")
+            .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
+
         node.attr("cx", function(d) { return d.x; })
             .attr("cy", function(d) { return d.y; });
 
@@ -98,10 +127,10 @@
 
     function dragended(d) {
         if (!d3.event.active) simulation.alphaTarget(0);
-        d.fx = null;
-        d.fy = null;
     }
-
+    function zoomed() {
+        g.attr("transform", d3.event.transform);
+    }
 </script>
 <script src="/socket.io/socket.io.js"></script>
 <script>
