--- a/k8s.html
+++ b/k8s.html
@@ -61,17 +61,22 @@
         nodes = [],
         links = [],
         div = d3.select("body").append("div")
-        .attr("class", "tooltip")
-        .style("opacity", 0),
+            .attr("class", "tooltip")
+            .style("opacity", 0),
         simulation = d3.forceSimulation()
-        .force("charge", d3.forceManyBody().strength(-1000))
-        .force("collide",d3.forceCollide(function(d) {return d.size * 1.3 }).iterations(2) )
-        .force("link", d3.forceLink(links).id(function(d) {return d.id;}).distance(function(d) {return d.length / 6;}))
-        .force("x", d3.forceX(300))
-        .force("y", d3.forceY(300))
-
-        .alphaTarget(.01)
-        .on("tick", ticked);
+            .force("charge", d3.forceManyBody().strength(-1000))
+            .force("collide", d3.forceCollide(function (d) {
+                return d.size * 1.3
+            }).iterations(2))
+            .force("link", d3.forceLink(links).id(function (d) {
+                return d.id;
+            }).distance(function (d) {
+                return d.length / 6;
+            }))
+            .force("x", d3.forceX(300))
+            .force("y", d3.forceY(300))
+            .alphaTarget(.01)
+            .on("tick", ticked);
 
     svg.append("rect")
         .attr("width", width)
@@ -88,13 +93,17 @@
 
     function restart() {
         // Nodes
-        node = node.data(nodes, function(d) { return d.id;});
+        node = node.data(nodes, function (d) {
+            return d.id;
+        });
         node.exit().remove();
         node = node.enter()
             .append("path")
             .attr("d", d3.symbol()
-                .size(function(d) {return d.size*100})
-                .type(function(d) {
+                .size(function (d) {
+                    return d.size * 100
+                })
+                .type(function (d) {
                     if (d.type === "Node") {
                         return d3.symbolSquare;
                     } else if (d.type === "Master") {
@@ -103,10 +112,14 @@
                         return d3.symbolCircle;
                     }
                 }))
-            .attr("fill", function(d) { return color(d.color); })
+            .attr("fill", function (d) {
+                return color(d.color);
+            })
             .attr("class", "node")
-            .attr("stroke-width", function(d) {return d.size * 0.15})
-            .on("mouseover", function(d) {
+            .attr("stroke-width", function (d) {
+                return d.size * 0.15;
+            })
+            .on("mouseover", function (d) {
                 div.transition()
                     .duration(200)
                     .style("opacity", .9);
@@ -114,7 +127,7 @@
                     .style("left", (d3.event.pageX) + "px")
                     .style("top", (d3.event.pageY - 28) + "px");
             })
-            .on("mouseout", function() {
+            .on("mouseout", function () {
                 div.transition()
                     .duration(500)
                     .style("opacity", 0);
@@ -132,7 +145,9 @@
             .append("line")
             .attr("class", "line")
             .attr("stroke-width", 2)
-            .style("stroke-dasharray", function(d) { return d.dotted ? ("3, 3") : ("1, 0") })
+            .style("stroke-dasharray", function (d) {
+                return d.dotted ? ("3, 3") : ("1, 0")
+            })
             .merge(link);
 
         // Text
@@ -141,8 +156,8 @@
         text = text.enter()
             .append("text")
             .attr("class", "text")
-            .attr("font-size", function(d) {return d.size})
-            .text(function(d) {return d.text})
+            .attr("font-size", function (d) { return d.size })
+            .text(function (d) { return d.text })
             .merge(text);
 
         // Update simulation
@@ -152,7 +167,9 @@
 
     function ticked() {
         svg.selectAll("path")
-            .attr("transform", function (d) { return "translate(" + d.x + "," + d.y + ")"; });
+            .attr("transform", function (d) {
+                return "translate(" + d.x + "," + d.y + ")";
+            });
 
         node.attr("cx", function (d) { return d.x; })
             .attr("cy", function (d) { return d.y; });
